--- a/view/frontend/templates/head.phtml
+++ b/view/frontend/templates/head.phtml
@@ -1,1 +1,1 @@
-<script src="/cdn/lib/js/instantpage/instantpage-5.1.1.js" type="module" defer></script>
+<script src="//instant.page/5.1.1" type="module" integrity="sha384-MWfCL6g1OTGsbSwfuMHc8+8J2u71/LA8dzlIN3ycajckxuZZmF+DNjdm7O6H3PSq"></script>
